# personal-util-scripts

./: .gitignore  README.md  av1-convert.py  batch-concat.py  batch-dl.py  cpp-compose.py  rename.py  zipper.py
.github/: pybuild.ps1
.github/workflows/: win32-build.yml  win32-release.yml
pathsync/: pathsync.py
pathsync/gpathsync/: Makefile  cache.proto  cache2.proto  go.mod  pathfile_ref.yaml  pathsync.go
pathsync/gpathsync/cmd/gpathsync/: main.go
pathsync/gpathsync/cmd/ucachefile/: main.go
pathsync/gpathsync/pathsync/: cache.pb.go
pathsync/gpathsync/pkg/: cache2.pb.go
pathsync/pathsync-config/: Cargo.toml  build.rs  winbuild.sh  winrun.sh
pathsync/pathsync-config/qml/: main.qml
pathsync/pathsync-config/src/: configurator.rs  cxxqt_obj.rs  main.rs
pin-to-all-apps/: README.md  install.py  pin-to-all-apps.py
pkg/dsutilcommon/: go.mod
