[package]
name = "pathsync-config"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.129"
cxx-qt = "0.6"
cxx-qt-lib = {version = "0.6", features = ["bytes", "chrono", "time"]}
rfd = "0.15.0"
serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[build-dependencies]
cxx-qt-build = { version = "0.6", features = [ "link_qt_object_files" ] }